Fix loading veil z-index

--- a/src/app/features/read/read.component.scss
+++ b/src/app/features/read/read.component.scss
@@ -148,6 +148,8 @@
 .fullscreen-loading-veil {
     @include full-screen;
     @include loading-veil;
+    
+    z-index: 10;
 }
 
 // Visitor View elements
